[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "Idan_package"
version = "0.0.1"
authors = [
  { name="Idan", email="author@example.com" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]


